                           The Mixmaster daemon now writes a pid file.
                           Mixmaster in daemon mode now catches SIGTERM and
                             SIGINT and finishes its current queue run and then
                             exits successfully.
                           Minor code formating cleanup and Install script
                             fixes.

2002-??-??      MAIN       Applied Maildir feature patch by drt@un.bewaff.net,
                             with some changes by PP:
                             MAILBOX can now be a Maildir (closes: #586223).
                           Mixmaster in daemon mode reloads configuration on
                             SIGHUP.
                           The secret pgp keyring is now stored ASCII armored
                             with one key per ascii armor.
                           NB: Due to the bug with reading armored keyrings and
                             secring being stored armored now, it is not
                             advisable to downgrade Mixmaster unless special
                             action is taken to preserve the secret pgp
                             keyring.
                           Mixmaster now prompts for secret key passphrase when
                             started in daemon mode.
                           Mixmaster checks expiration and revocation status of
                             pgp keys, userids, and subkeys.
                           Mixmaster will not encrypt or sign with a revoked
                             or expired key.
                           When encrypting, Mixmaster uses preferences from
                            the primary userid (or the latest userid, if zero
                            or more than one primary userid is present.)
                           Mixmaster keys now have creation and expiration date.
                             It is not secured by any crypto voodoo, it's only